# light-claw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  main_goals.md  pyproject.toml  skills-registry.json
.claude/RULES/: frontend.md  learned.md  repl-connectors.md  web-server.md
.github/workflows/: ci.yml
lightclaw/: __init__.py  config.py  console.py  log.py
lightclaw-tools/opencode/: .env.example  AGENTS.md  Dockerfile.sandbox  README.md  entrypoint.sh  example_extension.py  pyproject.toml  sandbox.py  server.py
lightclaw-webui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
lightclaw-webui/src/: app.html
lightclaw-webui/src/lib/: api.ts  audio.ts  markdown.ts
lightclaw-webui/src/lib/components/: ChatMessage.svelte  Modal.svelte  StatusBar.svelte
lightclaw-webui/src/routes/: +page.svelte
lightclaw/agent/: loop.py
lightclaw/channels/: __init__.py  discord_bot.py  signal_bot.py
lightclaw/issue_tracker/: __init__.py  base.py  github.py
lightclaw/jobs/: __init__.py  manager.py
lightclaw/llm/: client.py
lightclaw/mcp/: manager.py
lightclaw/memory/: workspace.py
lightclaw/prompts/: system.md
lightclaw/repl/: cli.py  tui.py
lightclaw/routines/: __init__.py  engine.py
lightclaw/scheduler/: __init__.py  engine.py
lightclaw/tools/: __init__.py  builtins.py  extensions.py  productivity.py  registry.py  shell_guard.py  skills.py  subagent.py
lightclaw/web/: server.py
